@@ -1,4 +1,5 @@
 2011-12-28 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #26699: removing alternative link to create new page
 	* Bug #28921: check TYPO3 Version and set charset for the importer
 	* added deprecation log in dmailerd.phpcron
 
